--- a/README
+++ b/README
@@ -10,7 +10,8 @@ and discovered that we are parte of a piramid constelation.
 
 2. Adding magnitude to the file
 3. A camera could sail through the stars (already working - but the user cannot control the motion, yet.)
-
+4. New:  planning to switch view from any star.  Presently from the Alfa1,2, and Proxima Centaury - which are drawn as
+a large yellow ball.  Where is Earth?
 
 
 
